First Commit with simple html add of CV

--- a/Portfolio/Portfolio/Portfolio/Views/Portfolio/Home.cshtml
+++ b/Portfolio/Portfolio/Portfolio/Views/Portfolio/Home.cshtml
@@ -5,3 +5,10 @@
 
 <h2>Home</h2>
 
+<p> Name   : SAZZAD HOSSAIN TASNIM </p>
+<p> ID     :20-43045-1</p>
+<p> Age	   : 22 </p>
+<p> DOB    : 14/11/2002 </p>
+<p> sex    : Male </p>
+<p> Address: Jatrabari , Dhaka </p>
+<p> Email  : sazzadaiub1@gmail.com</p>
