--- a/Portfolio/Portfolio/Portfolio/Views/Portfolio/Project.cshtml
+++ b/Portfolio/Portfolio/Portfolio/Views/Portfolio/Project.cshtml
@@ -4,4 +4,11 @@
 }
 
 <h2>Project</h2>
-
+<div class="list-group-item"
+<ul>
+    <li>C++</li>
+    <li>Java</li>
+    <li>HTML</li>
+    <li>C#</li>
+    <li>Pythonn</li>
+</ul></div>
